# chord-analysis-backend

./: .gitignore  ChordAdd_chordslist.musicxml  Dockerfile  Dockerfile_local  Makefile  README.md  add9_test.musicxml  chordslist.musicxml  docker-compose.yml  main.py  main_local.py  musicxml_chord_analysis.py  pyproject.toml  sample.musicxml  sample_akikaze.musicxml
docs/: musicxml.md
